--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,4 +1,4 @@
-\chapter{Blockchain \& Backoffice Features}
+\chapter{Blockchain}
 
 \section*{Introduction}
 
@@ -149,7 +149,7 @@ Several third-party payment providers are available in Tunisia, including  \text
   
   \item \textbf{Flexibility:} Highly flexible and easily integrates into diverse use cases, adapting to the needs of individual investors.
 \end{itemize}
-
+\newpage
 % Placeholder for Payment Providers Comparison Table
 \begin{table}[htbp]
 \centering
