feat(update): latest

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -2,13 +2,13 @@
 \appendix
 \renewcommand{\appendixname}{Appendix}
 
-\chapter{Technical Documentation}
+% \chapter{Technical Documentation}
 % Add detailed technical documentation here
 
-\chapter{User Manual}
+% \chapter{User Manual}
 % Add user manual or instructions here
 
-\chapter{Project Timeline}
+% \chapter{Project Timeline}
 % Add project timeline or Gantt chart here
 
 % Bibliography
