--- a/rapport.tex
+++ b/rapport.tex
@@ -269,10 +269,10 @@
 \includepdf[pages=1]{cover page.pdf}
 
 % Blank Page after Cover - ensure it's actually blank
-\newpage
-\thispagestyle{empty}
-\null
-\newpage
+% \newpage
+% \thispagestyle{empty}
+% \null
+% \newpage
 
 % % Confidentiality Note
 % \vspace*{\fill} % Push to vertical center
